syntax = "proto3";
import "github.com/vx-labs/mqtt-broker/topics/types.proto";
import "github.com/vx-labs/mqtt-broker/subscriptions/types.proto";
import "github.com/vx-labs/mqtt-broker/sessions/types.proto";
import "github.com/vx-labs/mqtt-protocol/packet/pb.proto";


message SessionFilter {}
message SubscriptionFilter {}
message CloseSessionInput {
  string ID = 1;
}
message CloseSessionOutput {
  string ID = 1;
}
message ListSessionsOutput{
  repeated sessions.Metadata Sessions = 1;
}
message ListSubscriptionsOutput{
  repeated subscriptions.Metadata Subscriptions = 1;
}
message MessagePublished {
  string Recipient = 1;
  bytes Topic = 2;
  int32 Qos = 3;
  bytes Payload = 4;
  bool Retained = 5;
  bool Dup = 6;
  string Tenant = 7;
}
message MessagePublishedOutput {
}

message TransportMetadata {
  string Name = 1;
  bool Encrypted = 2;
  string RemoteAddress = 3;
  string Endpoint = 4;
}
message ConnectInput {
  TransportMetadata TransportMetadata = 1;
  packet.Connect Connect = 2;
}
message ConnectOutput {
  string ID = 1;
  string Token = 3;
  packet.ConnAck ConnAck = 2;
}
message DisconnectInput {
  string ID = 1;
  packet.Disconnect Disconnect = 2;
}
message DisconnectOutput {}
message PublishInput {
  string ID = 1;
  packet.Publish Publish = 2;
}
message PublishOutput {
  packet.PubAck PubAck = 1;
}
message SubscribeInput {
  string ID = 1;
  packet.Subscribe Subscribe = 2;
}
message SubscribeOutput {
  packet.SubAck SubAck = 1;
}
message UnsubscribeInput {
  string ID = 1;
  packet.Unsubscribe Unsubscribe = 2;
}
message UnsubscribeOutput {
  packet.UnsubAck UnsubAck = 1;
}

message PingReqInput {
  string ID = 1;
  packet.PingReq PingReq = 2;
}
message PingReqOutput {
  packet.PingResp PingResp = 1;
}

service BrokerService {
    rpc ListSessions(SessionFilter) returns (ListSessionsOutput);
    rpc ListSubscriptions(SubscriptionFilter) returns (ListSubscriptionsOutput);
    rpc CloseSession(CloseSessionInput) returns (CloseSessionOutput);
    rpc DistributeMessage(MessagePublished) returns (MessagePublishedOutput);

    rpc Connect(ConnectInput) returns (ConnectOutput);
    rpc Disconnect(DisconnectInput) returns (DisconnectOutput);
    rpc Publish(PublishInput) returns (PublishOutput);
    rpc Subscribe(SubscribeInput) returns (SubscribeOutput);
    rpc Unsubscribe(UnsubscribeInput) returns (UnsubscribeOutput);
    rpc PingReq(PingReqInput) returns (PingReqOutput);
}